docs: actualización de documentación de API y configuración de seguridad